# Cpp-api

./: .gitignore  README.md
CppApi/: CMakeLists.txt  main.cpp
CppApi/Communication/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  HttpsListener.cpp  HttpsListener.h  HttpsServer.cpp  HttpsServer.h  HttpsSession.cpp  HttpsSession.h
CppApi/Utilities/: CMakeLists.txt  Logger.cpp  Logger.h  StringUtils.h
